Fri Oct 27 00:36:34 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,md5.h,values.h: HAVE_STDINT_H is already defined
	  by autoconf based on trying the C compiler with AC_CHECK_HEADERS
	  so define HAVE_WORKING_STDINT_H instead.

Wed Oct 25 01:36:43 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Need a more sophisticated test for the stdint.h
	  problem on IRIX.

Tue Oct 24 02:12:13 BST 2006  Olly Betts <olly@survex.com>

	* metaxmlparse.cc,omega.h: Fix warnings from SGI's C++ compiler.

Tue Oct 24 02:11:11 BST 2006  Olly Betts <olly@survex.com>

	* htmlparse.cc,query.cc,scriptindex.cc: Remove unused static
	  functions.

Tue Oct 24 01:51:05 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Pass magic options to SGI's C++ compiler to allow
	  linking of templates to work.

Tue Oct 24 00:46:06 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: IRIX doesn't allow stdint.h to be included from C++
	  code, so we need a smarter configure test than AC_CHECK_HEADERS.

Sun Oct 22 03:30:11 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Tell AC_CHECK_HEADERS to suppress its backward
	  compatibility mode, so it only checks headers with the compiler.
	  This speeds up configure a little, and is what we do elsewhere.

Tue Oct 10 17:21:13 BST 2006  Olly Betts <olly@survex.com>

	* NEWS: Update for actual 0.9.7 release.

Mon Oct 09 18:26:14 BST 2006  Olly Betts <olly@survex.com>

	* docs/termprefixes.txt: "$setmap{title,S}" should be
	  "$setmap{prefix,title,S}".

Sun Oct 08 21:43:16 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 0.9.7.

Fri Sep 15 16:56:49 BST 2006  Olly Betts <olly@survex.com>

	* cgiparam.cc: Compilation fix for Sun C++.

Fri Sep 15 06:00:50 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,query.cc: Compilation fix for Sun C++.

Thu Sep 14 15:41:33 BST 2006  Olly Betts <olly@survex.com>

	* htmlparse.cc: Include <stdlib.h> so atoi() is prototyped.
