@@ -1,8 +1,7 @@
 /* myhtmlparse.cc: subclass of HtmlParser for extracting text
  *
- * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002,2003,2004 Olly Betts
+ * Copyright 2002,2003,2004,2006 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -16,16 +15,23 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
  * USA
- * -----END-LICENCE-----
  */
 
 #include "myhtmlparse.h"
 
-#include "indextext.h" // for lowercase_term()
-
 #include <string.h>
+
+static inline void
+lowercase_word(string &term)
+{
+    string::iterator i = term.begin();
+    while (i != term.end()) {
+	*i = tolower(static_cast<unsigned char>(*i));
+	++i;
+    }
+}
 
 void
 MyHtmlParser::process_text(const string &text)
@@ -106,7 +112,7 @@ MyHtmlParser::opening_tag(const string &tag, const map<string,string> &p)
 		if ((i = p.find("content")) != p.end()) {
 		    if ((j = p.find("name")) != p.end()) {
 			string name = j->second;
-			lowercase_term(name);
+			lowercase_word(name);
 			if (name == "description") {
 			    if (sample.empty()) {
 				sample = i->second;
@@ -120,7 +126,7 @@ MyHtmlParser::opening_tag(const string &tag, const map<string,string> &p)
 			} else if (name == "robots") {
 			    string val = i->second;
 			    decode_entities(val);
-			    lowercase_term(val);
+			    lowercase_word(val);
 			    if (val.find("none") != string::npos ||
 				val.find("noindex") != string::npos) {
 				indexing_allowed = false;
