@@ -1,10 +1,9 @@
 /* omega.h: Main header for omega
  *
- * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2001 Lemur Consulting Ltd
  * Copyright 2001,2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2006 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -18,9 +17,8 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
  * USA
- * -----END-LICENCE-----
  */
 
 #include <config.h>
@@ -88,8 +86,10 @@ class ExpandDeciderOmega : public Xapian::ExpandDecider {
 	    // Raw terms are OK, otherwise avoid terms with a prefix or with a
 	    // space in
 	    if (tname[0] == 'R') return true;
-	    if (isupper(tname[0]) || tname.find(' ') != string::npos)
+	    if (isupper(static_cast<unsigned char>(tname[0])) ||
+		tname.find(' ') != string::npos) {
 		return false;
+	    }
 
 	    return true;
 	}
